Fix: Header Z-index issue

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,17 +3,17 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: start; /* Adjusted for proper alignment */
+  justify-content: start;
   padding: 0.25rem;
   background-color: #3b3b41; /* Grey background color */
   color: #ffffff; /* White text color */
-  font-family: 'Poppins', system-ui; /* Use Poppins Google Font */
+  font-family: 'Poppins', system-ui;
   /* position: absolute; Fixed position */
   top: 0; /* Stick to the top of the screen */
   width: 100%; /* Cover the entire horizontal viewport */
-  height: 50px; /* Adjusted height */
+  height: 3rem; /* Adjusted height */
   left: 0; /* Align to the left */
-  z-index: 99999;
+  z-index: 900;
 }
 
 .back-button {
